Implement grid styling rule, fix typo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Grid</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" /> <!--we've used styles.css for this so often I don't know why I just put style, must have been typing too fast-->
   </head>
   <body>
     <header>Your Unique Content</header>
