Add header content, add logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="style.css" /> <!--we've used styles.css for this so often I don't know why I just put style, must have been typing too fast-->
   </head>
   <body>
-    <header>Your Unique Content</header>
+    <header>
+      <img src="images/sangaa-12.jpg" alt="logo credit: https://www.vecteezy.com/vector-art/620913-finance-logo-vector-templates" class="logo" />
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>Your Unique Content</main>
     <aside>Your Unique Content</aside>
     <footer>Your Unique Content</footer>
