Replace image with dalamud, adjust html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img src="images/sangaa-12.jpg" alt="logo credit: https://www.vecteezy.com/vector-art/620913-finance-logo-vector-templates" class="logo" />
+      <img src="images/dalamud.png" alt="Dalamud logo" class="logo" />
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
