Style header content

--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
         </ul>
       </nav>
     </header>
-    <main>Your Unique Content</main>
-    <aside>Your Unique Content</aside>
-    <footer>Your Unique Content</footer>
+
+    <main>
+      Main content will be here
+    </main>
+    
+    <aside>
+      Aside content will be here
+    </aside>
+    
+    <footer>
+      Footer content will be here
+    </footer>
   </body>
 </html>
