Add footer content

--- a/index.html
+++ b/index.html
@@ -70,7 +70,20 @@
     </aside>
     
     <footer>
-      Footer content will be here
+      <p>Contact Us: <a href="#mail@mail.mail">support@ffxivservices.com</a> | Phone: +1-250-650-4324</p>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="social-media">
+        <a href="https://facebook.com">Facebook</a> |
+        <a href="https://twitter.com">Twitter</a> |
+        <a href="https://instagram.com">Instagram</a>
+      </div>
     </footer>
   </body>
 </html>
