Additional aesthetic styling

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <div class="social-media">
-        <a href="https://facebook.com">Facebook</a> |
-        <a href="https://twitter.com">Twitter</a> |
-        <a href="https://instagram.com">Instagram</a>
+      <div class="social-media"> <!--I forgot I shouldn't actually make these link to things.-->
+        <a href="#Facebook">Facebook</a> |
+        <a href="#Twitter">Twitter</a> |
+        <a href="#Instagram">Instagram</a>
       </div>
     </footer>
   </body>
