--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <p>Struggling with end-game content, savage or ultimate raids? Our team can help with:</p>
           <ul>
             <li>Job Optimization: Our team members are experts at reading xivanalysis, and can tell you where you can improve.</li>
-            <li>Raid Guides: Our toolboxes, and guides adhere to the current meta stratagies, and our team can explain any points of confusion in a one on one tutoring session.</li>
+            <li>Raid Guides: Our toolboxes, and guides adhere to the current meta strategies, and our team can explain any points of confusion in a one on one tutoring session.</li>
             <li>Leveling Assistance: Our team will tell you the best route of dungeons, or FATEs to do, on a level by level basis to get you toward your end goal of a maxed character.</li>
           </ul>
           <img src="images/coaching.jpg" alt="FFXIV coaching session" />
